# ha-tomtom-travel-time

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: release-drafter.yaml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml
.github/workflows/: ci.yaml  license.yaml  release.yaml  validate.yaml
config/: configuration.yaml
custom_components/tomtom_travel_time/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  helpers.py  icons.json  manifest.json  model.py  sensor.py
custom_components/tomtom_travel_time/translations/: en.json  nl.json
scripts/: setup_env.sh
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_helpers.py  test_init.py  test_metadata.py  test_sensor.py
