[project]
name = "tomtom-travel-time"
version = "0.0.1"
description = "A custom Home Assistant component that integrates TomTom travel time data"
authors = [{ name = "Sander Gols", email = "developer@golles.nl" }]
requires-python = ">=3.14.2,<3.15"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "homeassistant>=2025.8.0",
    "tomtom-apis==0.1.0",
]

[project.urls]
Documentation = "https://github.com/golles/ha-tomtom-travel-time"
Homepage = "https://github.com/golles/ha-tomtom-travel-time"
Repository = "https://github.com/golles/ha-tomtom-travel-time"
Issues = "https://github.com/golles/ha-tomtom-travel-time/issues"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pylint==4.0.5",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-homeassistant-custom-component",
  "ruff==0.15.4",
  "shellcheck-py==0.11.0.1",
  "yamllint==1.38.0",
]
runhass = [
    "hassil",
    "home_assistant_intents",
    "mutagen",
    "pymicro_vad",
    "pyspeex_noise",
    "PyTurboJPEG",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["custom_components/tomtom_travel_time"]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/tomtom_travel_time"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aresponses.*"
ignore_missing_imports = true

[tool.pylint]
max-line-length=150

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "abstract-method",
  "duplicate-code",
  "unexpected-keyword-arg",
  "wrong-import-order",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term --cov-report=xml"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="function"
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 150
target-version = "py313"
src = ["custom_components/tomtom_travel_time"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Cause conflicts when used with the formatter.
  "TC",  # Ignore type-checking blocks.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # Allow assertions in tests.
  "PLR2004",  # Allow magic numbers in tests.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["custom_components.tomtom_travel_time", "tomtom_apis"]
